# toxing

./: LICENSE  README.md  pyproject.toml  requirements_dev.txt  setup.cfg
.github/workflows/: test.yml
src/toxing/: main.py
tests/: test_int.py
